--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,10 @@ async-trait = "0.1.82"
 num-bigint = "0.4.6"
 num-traits = "0.2.19"
 serde = "1.0.210"
-starknet = "0.11.0"
+starknet = "0.12.0"
 tokio = { version = "1.38", features = ["rt-multi-thread"] }
+color-eyre = "0.6.3"
 
 [lib]
 name = "starknet_mev_client"
 crate-type = ["lib"]
-
-
-
