--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ serde = "1.0.210"
 starknet = "0.12.0"
 tokio = { version = "1.38", features = ["rt-multi-thread"] }
 color-eyre = "0.6.3"
+tracing = "0.1.40"
+serde_json = "1.0.128"
 
 [lib]
 name = "starknet_mev_client"
