--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-amms = "0.6.3"
 async-trait = "0.1.82"
 num-bigint = "0.4.6"
 num-traits = "0.2.19"
@@ -15,6 +14,7 @@ color-eyre = "0.6.3"
 tracing = "0.1.40"
 thiserror = "1.0.63"
 serde_json = "1.0.128"
+futures = "0.3.30"
 
 [lib]
 name = "starknet_mev_client"
