--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ num-bigint = "0.4.6"
 num-traits = "0.2.19"
 serde = "1.0.210"
 starknet = "0.12.0"
-tokio = { version = "1.38", features = ["rt-multi-thread"] }
+tokio = { version = "1.38", features = ["full"] }
 color-eyre = "0.6.3"
 tracing = "0.1.40"
 thiserror = "1.0.63"
