--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "starknet-mev-client"
+name = "mev-engine"
 version = "0.1.0"
 edition = "2021"
 
@@ -17,5 +17,5 @@ serde_json = "1.0.128"
 futures = "0.3.30"
 
 [lib]
-name = "starknet_mev_client"
+name = "mev_engine"
 crate-type = ["lib"]
