--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ tracing = "0.1.40"
 thiserror = "1.0.63"
 serde_json = "1.0.128"
 futures = "0.3.30"
+dotenv = "0.15.0"
 
 [lib]
 name = "mev_engine"
