--- a/src/Flashloan_contracts/Scarb.toml
+++ b/src/Flashloan_contracts/Scarb.toml
@@ -6,6 +6,7 @@ edition = "2023_11"
 # See more keys and their definitions at https://docs.swmansion.com/scarb/docs/reference/manifest.html
 
 [dependencies]
+ekubo = { git = "https://github.com/ekuboprotocol/abis" }
 openzeppelin_token = "0.19.0"
 starknet = "2.8.4"
 
