--- a/src/Flashloan_contracts/Scarb.toml
+++ b/src/Flashloan_contracts/Scarb.toml
@@ -33,6 +33,11 @@ name = "MAINNET_FORK"
 url = "https://starknet-mainnet.public.blastapi.io/rpc/v0_7"
 block_id.tag = "latest"                                      # Block to fork from (block tag)
 
+[[tool.snforge.fork]]
+name = "SEPOLIA_FORK"
+url = "https://free-rpc.nethermind.io/sepolia-juno/v0_7"
+block_id.number = "104487"                               # we use a specific block for reproducibility
+
 # [[tool.snforge.fork]]
 # name = "SOME_SECOND_NAME"
 # url = "http://your.second.rpc.url"                         
