--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,7 @@ edition = "2021"
 async-trait = "0.1.82"
 num-bigint = "0.4.6"
 num-traits = "0.2.19"
-serde = "1.0.210"
-starknet = "0.12.0"
+starknet = { git = "https://github.com/xJonathanLEI/starknet-rs.git", version = "0.12.0" }
 tokio = { version = "1.38", features = ["full"] }
 color-eyre = "0.6.3"
 tracing = "0.1.40"
@@ -20,6 +19,9 @@ serde_json = "1.0.128"
 futures = "0.3.30"
 dotenv = "0.15.0"
 rust_decimal = "1.36.0"
+reqwest = { version = "0.11", features = ["json"] }
+serde = { version = "1.0", features = ["derive"] }
+starknet-core = { git = "https://github.com/xJonathanLEI/starknet-rs.git", version = "0.12.0" }
 
 [lib]
 name = "mev_engine"
